# Verity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/migrations/: 0001_init.sql
scripts/: bench_extractor.py  egress_proof.py  eval_harness.py  run_real_doc.py  stress_family.py  stress_real_case.py
src/beevr/: __init__.py  agent.py  api.py  audit.py  briefing.py  compose.py  egress.py  fusion.py  ingest.py  kernel.py  llm.py  locator.py  models.py  pipeline.py  playbook.py  queue.py  redaction.py  sso.py  store.py  verification.py
src/beevr/static/: index.html
test-data/: cenveo-credit-agreement.txt  golden-cenveo.json  golden-guaranty.json  golden-nda.json  guaranty.txt  nda.txt  transdigm-amend1-2016.txt  transdigm-base-2014.txt  transdigm-credit-agreement.txt
tests/: test_agent.py  test_api.py  test_audit.py  test_briefing.py  test_compose.py  test_egress.py  test_fusion.py  test_ingest.py  test_kernel.py  test_llm.py  test_locator.py  test_models.py  test_ocr.py  test_playbook.py  test_queue.py  test_redaction.py  test_rls_postgres.py  test_sso.py  test_store_isolation.py  test_ui.py  test_verification.py
