[project]
name = "beevr"
version = "0.2.0"
description = "BeevR for Legal — sovereign, auditable AI copilot (core services)"
requires-python = ">=3.11"
# Core runtime (in-boundary API + ingestion + verification logic).
# The model tier (torch/sentence-transformers/easyocr) is the `models` extra —
# installed on the GPU node (doc 14), not in the base app image.
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pypdf>=4",
    "python-docx>=1",
    "pyjwt>=2.8",
    "cryptography>=42",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
models = ["torch>=2.4", "sentence-transformers>=3", "transformers>=4.44", "easyocr>=1.7"]
db = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "release_gating: one of the 5 ship-blocking trust tests (doc 05 §4)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
